--- a/markup/_layouts/_content/_homepage/field-soccer.jade
+++ b/markup/_layouts/_content/_homepage/field-soccer.jade
@@ -83,10 +83,10 @@ div.nl-section.nl-create-team.homepage-field.soccer
 										<img src="assets/img/img-players.png" alt="shirt">
 							.row
 								.col-12.no-padding
-									table.table.table-striped.nl-team-list-table
+									table.table.table-striped.nl-team-list-table.homepage-field
 										thead
 											tr
-
+												th
 												th NAME
 												th POS
 												th FP
@@ -95,7 +95,8 @@ div.nl-section.nl-create-team.homepage-field.soccer
 
 										tbody
 											tr
-
+												td.indicated
+													span.played.indicator
 												td 
 													p Player name
 													p.gametime RMA-BAR 3:00PM
@@ -103,7 +104,7 @@ div.nl-section.nl-create-team.homepage-field.soccer
 												td 30
 												td $0
 											tr
-
+												td
 												td 
 													p Player name
 													p.gametime RMA-BAR 3:00PM
@@ -111,7 +112,7 @@ div.nl-section.nl-create-team.homepage-field.soccer
 												td 30
 												td $0
 											tr
-
+												td
 												td 
 													p Player name
 													p.gametime RMA-BAR 3:00PM
@@ -119,7 +120,8 @@ div.nl-section.nl-create-team.homepage-field.soccer
 												td 30
 												td $0
 											tr
-
+												td.indicated
+													span.played.indicator
 												td 
 													p Player name
 													p.gametime RMA-BAR 3:00PM
@@ -127,7 +129,8 @@ div.nl-section.nl-create-team.homepage-field.soccer
 												td 30
 												td $0
 											tr
-
+												td.indicated
+													span.playing.indicator
 												td 
 													p Player name
 													p.gametime RMA-BAR 3:00PM
@@ -135,7 +138,7 @@ div.nl-section.nl-create-team.homepage-field.soccer
 												td 30
 												td $0
 											tr
-
+												td
 												td 
 													p Player name
 													p.gametime RMA-BAR 3:00PM
@@ -143,7 +146,8 @@ div.nl-section.nl-create-team.homepage-field.soccer
 												td 30
 												td $0
 											tr
-
+												td.indicated
+													span.not-played.indicator
 												td 
 													p Player name
 													p.gametime RMA-BAR 3:00PM
@@ -151,7 +155,7 @@ div.nl-section.nl-create-team.homepage-field.soccer
 												td 30
 												td $0
 											tr
-
+												td
 												td 
 													p Player name
 													p.gametime RMA-BAR 3:00PM
@@ -159,7 +163,7 @@ div.nl-section.nl-create-team.homepage-field.soccer
 												td 30
 												td $0
 											tr
-
+												td
 												td 
 													p Player name
 													p.gametime RMA-BAR 3:00PM
@@ -167,7 +171,8 @@ div.nl-section.nl-create-team.homepage-field.soccer
 												td 30
 												td $0
 											tr
-
+												td.indicated
+													span.not-playing.indicator
 												td 
 													p Player name
 													p.gametime RMA-BAR 3:00PM
@@ -175,7 +180,7 @@ div.nl-section.nl-create-team.homepage-field.soccer
 												td 30
 												td $0
 											tr
-
+												td
 												td 
 													p Player name
 													p.gametime RMA-BAR 3:00PM
