--- a/markup/_layouts/_content/_homepage/field.jade
+++ b/markup/_layouts/_content/_homepage/field.jade
@@ -74,10 +74,10 @@ div.nl-section.nl-create-team.homepage-field
 
 						.row
 							.col-12.no-padding
-								table.table.table-striped.nl-team-list-table
+								table.table.table-striped.nl-team-list-table.homepage-field
 									thead
 										tr
-
+											th
 											th.name-list-view NAME
 											th POS
 											th FP
@@ -86,55 +86,58 @@ div.nl-section.nl-create-team.homepage-field
 
 									tbody
 										tr
-
+											td.indicated
+													span.played.indicator
 											td Player name
 											td.pos FLEX
 											td 30
 											td $0
 										tr
-
+											td
 											td Player name
 											td.pos K
 											td 30
 											td $0
 										tr
-
+											td.indicated
+													span.playing.indicator
 											td Player name
 											td.pos RB
 											td 30
 											td $0
 										tr
-
+											td
 											td Player name
 											td.pos RB
 											td 30
 											td $0
 										tr
-
+											td
 											td Player name
 											td.pos QB
 											td 30
 											td $0
 										tr
-
+											td
 											td Player name
 											td.pos WR
 											td 30
 											td $0
 										tr
-
+											td
 											td Player name
 											td.pos WR
 											td 30
 											td $0
 										tr
-
+											td.indicated
+													span.not-playing.indicator
 											td Player name
 											td.pos TE
 											td 30
 											td $0
 										tr
-
+											td
 											td Player name
 											td.pos DEF
 											td 30
