fix contact page footer

--- a/markup/_layouts/contact.jade
+++ b/markup/_layouts/contact.jade
@@ -12,9 +12,10 @@ html(lang="en")
 		include _partials/styles.jade
 
 	body
-		include _partials/header-log.jade
-		main
-			include _content/contact
+		.nl-wrapper
+			include _partials/header-log.jade
+			main
+				include _content/contact
 
-		include _partials/footer-log.jade
+			include _partials/footer-log.jade
 		include _partials/scripts.jade
