--- a/markup/_layouts/_partials/styles.jade
+++ b/markup/_layouts/_partials/styles.jade
@@ -2,6 +2,7 @@
 link(rel="stylesheet" href="assets/css/jquery.fancybox.min.css")
 link(rel="stylesheet" href="assets/css/jquery.mCustomScrollbar.min.css")
 link(rel="stylesheet" href="assets/css/style.css")
+link(rel="stylesheet" href="assets/css/fixes.css")
 
 
 
