--- a/markup/_layouts/_content/faq.jade
+++ b/markup/_layouts/_content/faq.jade
@@ -25,7 +25,7 @@ section.nl-section.nl-faq
                         div.card-header(role="tab" id="headingThree")
                             h5.mb-0
                                 a(class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="true" aria-controls="collapseThree")
-                                    |why use no limit coin
+                                    |Why use No Limit Coin
                         div(id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingOne")
                             div.card-block
                                 p You've heard of Bitcoin? Well this is Bitcoin's little brother, NoLimitCoin.
@@ -37,7 +37,7 @@ section.nl-section.nl-faq
                         div.card-header(role="tab" id="headingFour")
                             h5.mb-0
                                 a(class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="true" aria-controls="collapseFour")
-                                    | what is proof of stake? how do I stake nlc2?
+                                    | What is Proof of Stake? How do I stake NLC2?
                         div(id="collapseFour" class="collapse" role="tabpanel" aria-labelledby="headingOne")
                             div.card-block
                                 p NLC2 Coins use a Proof of Stake algorithm for transmitting the blockchain. By staking your NLC2 Coins you become a node on the network that transmits the blockchain and you get 4% extra coins per year as your reward. The blockchain creates these new coins and sends them to your wallet. <a href="https://www.youtube.com/watch?v=r5saLZQnEaA" target="_blank"> Watch our NLC2 Wallet Staking Tutorial Here for More Information </a>
@@ -45,7 +45,7 @@ section.nl-section.nl-faq
                         div.card-header(role="tab" id="headingFive")
                             h5.mb-0
                                 a(class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="true" aria-controls="collapseFive")
-                                    | why is no limit sports better than its competitors?
+                                    | Why is No Limit Fantasy Sports better than its competitors?
                         div(id="collapseFive" class="collapse" role="tabpanel" aria-labelledby="headingOne")
                             div.card-block
                                 p Currently, in the United States, the two biggest fantasy sports platforms are Draft Kings and Fan Duel.Together they own almost 90% of the US marketplace worth many billions of dollars. This effective monopoly has allowed them to charge their player's extortionate rates for using their platforms.
@@ -57,7 +57,7 @@ section.nl-section.nl-faq
                         div.card-header(role="tab" id="headingSix")
                             h5.mb-0
                                 a(class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="true" aria-controls="collapseSix")
-                                    | fantasy sports as it was meant to be- pure & fair
+                                    | Fantasy Sports as it was meant to be pure & fair
                         div(id="collapseSix" class="collapse" role="tabpanel" aria-labelledby="headingOne")
                             div.card-block
                                 p There are contests on established platforms such as Draft Kings where you can enter up to 500 squad choices. This allows people to use bots to effectively rig the competition in their favor while giving normal players almost no chance of competing. Betting in this way also results in emotional detachment from the outcome of any given game or any player’s performance.
@@ -66,7 +66,7 @@ section.nl-section.nl-faq
                         div.card-header(role="tab" id="headingSeven")
                             h5.mb-0
                                 a(class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="true" aria-controls="collapseSeven")
-                                    | sounds awesome, what contests are you running?
+                                    | Sounds awesome, what contests are you running?
                         div(id="collapseSeven" class="collapse" role="tabpanel" aria-labelledby="headingOne")
                             div.card-block
                                 p Contests allowing you to challenge friends based on individual statistic of players. Over 100 statistical categories with which you can use to challenge other fantasy sports players, as well as the ability to set up over/under contests based on any such statistical category. We also have Vegas-style point spread games, but they are never played for money. They can be played for game credits, and anyone can go head to head in contests featuring Vegas-style point spreads and action.
