--- a/markup/_scss/sections/_homepage.scss
+++ b/markup/_scss/sections/_homepage.scss
@@ -521,14 +521,28 @@
 
   .menu-item.top-5 .number p {
     font-size: 18px;
-    line-height: 1.1;
+    line-height: 1.1rem;
 
-    @include respond-to (extra-large-display) {
-      line-height: 1.3;
+    @include respond-to (allsmall) {
+      line-height: 1.5rem;
     }
 
-    @include respond-to (extra-large-display) {
-      line-height: 1.3;
+    @include respond-to (allwide) {
+      line-height: 1.3rem;
+    }
+
+    @include respond-to (allwider) {
+      line-height: 1.1rem;
+    }
+
+    @media (min-width: 1680px) and (max-width: 1850px) {
+      line-height: 1.35rem;
+      font-size: 21px;
+    }
+
+    @media (min-width: 1850px) {
+      line-height: 1.35rem;
+      font-size: 21px;
     }
   }
 
@@ -1124,7 +1138,7 @@
       display: inline-block;
       margin-top: -3px;
       color: #ffffff;
-      border-radius: 0.325rem 0 0 0.325rem;
+      border-radius: 0.125rem 0 0 0.125rem;
 
       @include respond-to(wide-tablets) {
         top: 58px;
@@ -1169,7 +1183,7 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-      border-radius: 0.325rem;
+      border-radius: 0.25rem;
 
       p {
         padding: 2px 5px 5px 15px;
@@ -1228,7 +1242,7 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-      border-radius: 0.325rem;
+      border-radius: 0.25rem;
 
       p {
         padding: 2px 5px 5px 15px;
@@ -1430,7 +1444,7 @@
     width: 100%;
     text-transform: uppercase;
     height: 40px;
-    border-radius: 0.625rem;
+    border-radius: 0.5rem;
 
     @include respond-to(allsmall) {
       width: 100%;
@@ -1544,7 +1558,7 @@
       height: 40px;
       padding: 0;
       margin: 0;
-      border-radius: 0.625rem 0 0 0.625rem;
+      border-radius: 0.5rem 0 0 0.5rem;
 
       @include respond-to(handhelds) {
         width: 50px;
@@ -1615,7 +1629,7 @@
     .number {
       background: #e89608; /* Old browsers */
       background: linear-gradient(to bottom, #e89608 0%,#e37606 100%);
-      border-radius: 0.625rem 0 0 0.625rem;
+      border-radius: 0.325rem 0 0 0.325rem;
     }
 
     .name {
@@ -1711,7 +1725,7 @@
       height: 40px;
       padding: 0;
       margin: 0;
-      border-radius: 0.625rem 0 0 0.625rem;
+      border-radius: 0.5rem 0 0 0.5rem;
 
       @include respond-to(handhelds) {
         width: 35px;
@@ -2117,9 +2131,13 @@
 
     &.rank-manager-top5, &.rank-player-top5 {
       padding-top: 10px;
-      font-size: 18px;
+      font-size: 24px;
       font-weight: 600;
       line-height: 1.3rem;
+
+      @include respond-to (handhelds) {
+        font-size: 20px;
+      }
     }
 
     &.name-top5 {
