Horizontal scroller implentation

--- a/markup/_layouts/_content/live_score_content.jade
+++ b/markup/_layouts/_content/live_score_content.jade
@@ -154,7 +154,7 @@ section.nl-section.nl-players.nl-live-score
 		div.row.top-bar-live-scores
 			div.col-12.col-lg-6.offset-lg-0.col-xl-8
 				h5.d-inline-block.component-header Matches
-				div.matches.rounded-corners
+				div.matches.rounded-corners.nl-table-horizontal-scroll
 					div.matches__scrollarea
 						+repeat(12)
 
