--- a/markup/_scss/sections/_nl-live-score.scss
+++ b/markup/_scss/sections/_nl-live-score.scss
@@ -220,7 +220,7 @@
 
 	&.rounded-corners {
 		overflow-y: hidden;
-		overflow-x: scroll !important;
+		//overflow-x: scroll !important;
 	}
 
 	&__scrollarea {
