--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -14653,8 +14653,7 @@ td:nth-child(4).homepage-list-view {
     .matches {
       height: 137px; } }
   .matches.rounded-corners {
-    overflow-y: hidden;
-    overflow-x: scroll !important; }
+    overflow-y: hidden; }
   .matches__scrollarea {
     display: -webkit-box;
     display: -ms-flexbox;
