--- a/markup/_scss/sections/_nl-enter-contests.scss
+++ b/markup/_scss/sections/_nl-enter-contests.scss
@@ -51,6 +51,10 @@
     text-align: center;
   }
 
+  .nl-contest-info-table .table-info4 tr td:last-child{
+    padding-right: 10px;
+  }
+
   .nl-contest-info-table .table-info3 th:nth-child(1) {
     width: 15%;
     text-align: center;
