--- a/markup/_scss/sections/_nl-live-score.scss
+++ b/markup/_scss/sections/_nl-live-score.scss
@@ -351,17 +351,22 @@
 			text-overflow: ellipsis;
 
 			&:nth-child(1) {
-				 width: 35%;
+				width: 35%;
 			}
-	  &:nth-child(2) {
-		width: 35%;
-	  }
-	  &:nth-child(3) {
-		width: 15%;
-	  }
-	  &:nth-child(4) {
-		width: 15%;
-	  }
+			&:nth-child(2) {
+				width: 35%;
+			}
+			&:nth-child(3) {
+				width: 15%;
+			}
+			&:nth-child(4) {
+				width: 15%;
+			}
+
+			&:last-child{
+				padding-right: 20px;
+			}
+
 		}
 	}
 }
@@ -530,7 +535,13 @@
 
 	.table-current-contests .table td {
 		padding: 0.25rem 0.25rem;
+
+		&:last-child{
+			padding-right: 20px;
+		}
 	}
+
+
 
 	.nl-contest-info-table .table-info4 td, .nl-contest-info-table .table-info4 tr  {
 		padding: 0rem;
@@ -538,6 +549,10 @@
 
 	.nl-contest-info-table .table-info4.contestants td, .nl-contest-info-table .table-info4.contestants tr  {
 		padding: 0.5rem;
+	}
+
+	.nl-contest-info-table .table-info4.contestants td:last-child{
+		padding-right: 20px;
 	}
 
 	.nl-contest-info-table .table-info4 td:nth-child(1) {
@@ -1017,7 +1032,13 @@
 		th,
 		td {
 			font-size: 10px;
-			padding: 0rem;
+			padding: 0;
+		}
+		th:last-child{
+			padding-right: 10px;
+		}
+		td:last-child{
+			padding-right: 10px;
 		}
 	}
 
@@ -1025,6 +1046,9 @@
 		th,
 		td {
 			padding: 0.5rem;
+		}
+		td:last-child{
+			padding-right: 10px;
 		}
 	}
 
