--- a/markup/_layouts/_content/_homepage/top5-player-soccer.jade
+++ b/markup/_layouts/_content/_homepage/top5-player-soccer.jade
@@ -37,26 +37,31 @@ div.row
 	button.mobile-menu.dropdown(type='button', data-toggle='modal', data-target='#weekModal') Choose Position
 	div.mobile-menu.active(data-target="#carouselTop5Players" data-slide-to="0")
 		div.number
-			p.rank-player-top5 1
-		p.name-top5 Matt Ryan1
+			p.rank-player-top5.nr1 1
+		div.name-fix
+			p.name-top5 Matt Ryan1
 div.row
 	div.mobile-menu.active(data-target="#carouselTop5Players" data-slide-to="1")                
 		div.number
 			p.rank-player-top5 2
-		p.name-top5 Matt Ryan2
+		div.name-fix
+			p.name-top5 Matt Ryan2
 	div.mobile-menu.active(data-target="#carouselTop5Players" data-slide-to="2")                
 		div.number
 			p.rank-player-top5 3
-		p.name-top5 Matt Ryan3
+		div.name-fix
+			p.name-top5 Matt Ryan3
 div.row
 	div.mobile-menu.active(data-target="#carouselTop5Players" data-slide-to="3")                
 		div.number
 			p.rank-player-top5 4
-		p.name-top5 Matt Ryan4
+		div.name-fix
+			p.name-top5 Matt Ryan4
 	div.mobile-menu.active(data-target="#carouselTop5Players" data-slide-to="4")                
 		div.number
 			p.rank-player-top5 5
-		p.name-top5 Matt Ryan5
+		div.name-fix
+			p.name-top5 Matt Ryan5
 
 div.tab-content(id="top5-player-content")
 	div(role='tabpanel' class='tab-pane active top-level-panel' id='RB')
