--- a/markup/_layouts/login.jade
+++ b/markup/_layouts/login.jade
@@ -12,16 +12,15 @@ html(lang="en")
         include _partials/styles.jade
 
     body
+        .nl-wrapper
+            //include _partials/preloader.jade
+            include _partials/header-form.jade
+            //- include _partials/header-log.jade
+            main
+                include _content/login-content
 
 
-        //include _partials/preloader.jade
-        include _partials/header-form.jade
-        //- include _partials/header-log.jade
-        main
-            include _content/login-content
-
-
-        include _partials/footer-log.jade
+            include _partials/footer-log.jade
         include _partials/scripts.jade
 
 
